@@ -1,6 +1,6 @@
 2021-06-16 James D. Trotter <james@simula.no>
 
-	Add CGAL 4.12.2 and 5.2.2.
+	Add CGAL 4.12.2 and 5.2.2 and mshr 2019.1.0.
 
 2021-05-20 James D. Trotter <james@simula.no>
 
